host/macro/tests/ui/import.stderr
error: expected `module = ...`
 --> tests/ui/import.rs:1:1
  |
1 | js_bindgen::import_js!();
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `module = ...`
 --> tests/ui/import.rs:4:24
  |
4 | js_bindgen::import_js!(42);
  |                        ^^

error: expected `module`
 --> tests/ui/import.rs:7:24
  |
7 | js_bindgen::import_js!(foo);
  |                        ^^^

error: expected `module = ...`
  --> tests/ui/import.rs:10:24
   |
10 | js_bindgen::import_js!(module);
   |                        ^^^^^^

error: expected `module = ...`
  --> tests/ui/import.rs:13:24
   |
13 | js_bindgen::import_js!(module$);
   |                        ^^^^^^^

error: expected `module = ...`
  --> tests/ui/import.rs:16:24
   |
16 | js_bindgen::import_js!(module =);
   |                        ^^^^^^^^

error: expected `module`
  --> tests/ui/import.rs:19:24
   |
19 | js_bindgen::import_js!(foo = "bar");
   |                        ^^^

error: expected `name = ...`
  --> tests/ui/import.rs:22:1
   |
22 | js_bindgen::import_js!(module = "foo");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a `,` after an attribute
  --> tests/ui/import.rs:25:39
   |
25 | js_bindgen::import_js!(module = "foo" $);
   |                                       ^

error: expected `name = ...`
  --> tests/ui/import.rs:28:1
   |
28 | js_bindgen::import_js!(module = "foo",);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `name = ...`
  --> tests/ui/import.rs:31:40
   |
31 | js_bindgen::import_js!(module = "foo", 42);
   |                                        ^^

error: expected `name = ...`
  --> tests/ui/import.rs:34:40
   |
34 | js_bindgen::import_js!(module = "foo", "bar");
   |                                        ^^^^^

error: expected `name`
  --> tests/ui/import.rs:37:40
   |
37 | js_bindgen::import_js!(module = "foo", bar = Baz);
   |                                        ^^^

error: expected `name`
  --> tests/ui/import.rs:40:40
   |
40 | js_bindgen::import_js!(module = "foo", bar = "baz");
   |                                        ^^^

error: requires at least a string template
  --> tests/ui/import.rs:43:1
   |
43 | js_bindgen::import_js!(module = "foo", name = "bar");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string template
  --> tests/ui/import.rs:46:1
   |
46 | js_bindgen::import_js!(module = "foo", name = "bar",);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string template
  --> tests/ui/import.rs:49:54
   |
49 | js_bindgen::import_js!(module = "foo", name = "bar", 42);
   |                                                      ^^

error: expected `required_embeds`
  --> tests/ui/import.rs:52:54
   |
52 | js_bindgen::import_js!(module = "foo", name = "bar", baz = qux);
   |                                                      ^^^

error: expected `required_embeds =`
  --> tests/ui/import.rs:55:54
   |
55 | js_bindgen::import_js!(module = "foo", name = "bar", required_embeds);
   |                                                      ^^^^^^^^^^^^^^^

error: expected `required_embeds =`
  --> tests/ui/import.rs:58:54
   |
58 | js_bindgen::import_js!(module = "foo", name = "bar", required_embeds$);
   |                                                      ^^^^^^^^^^^^^^^^

error: expected array of string pairs
  --> tests/ui/import.rs:61:72
   |
61 | js_bindgen::import_js!(module = "foo", name = "bar", required_embeds = Qux);
   |                                                                        ^^^

error: expected array of string pairs
  --> tests/ui/import.rs:64:72
   |
64 | js_bindgen::import_js!(module = "foo", name = "bar", required_embeds = "qux");
   |                                                                        ^^^^^

error: requires at least a string template
  --> tests/ui/import.rs:67:1
   |
67 | / js_bindgen::import_js!(
68 | |     module = "foo",
69 | |     name = "bar",
70 | |     required_embeds = [("qux", "quux")]
71 | | );
   | |_^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string template
  --> tests/ui/import.rs:74:1
   |
74 | / js_bindgen::import_js!(
75 | |     module = "foo",
76 | |     name = "bar",
77 | |     required_embeds = [("qux", "quux")],
78 | | );
   | |_^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string template
  --> tests/ui/import.rs:85:2
   |
85 |     42
   |     ^^

error: requires at least a string template
  --> tests/ui/import.rs:93:2
   |
93 |     baz = Qux
   |     ^^^

error: expected string value
   --> tests/ui/import.rs:100:21
    |
100 |     required_embeds = [$("qux", "quux")],
    |                        ^

error: expected `cfg`
   --> tests/ui/import.rs:108:23
    |
108 |     required_embeds = [#[test]],
    |                          ^^^^

error: leftover `cfg` attribute
   --> tests/ui/import.rs:116:21
    |
116 |     required_embeds = [#[cfg()]],
    |                        ^^^^^^^^

error: expected string value
   --> tests/ui/import.rs:124:30
    |
124 |     required_embeds = [#[cfg()] $],
    |                                 ^

error: expected `cfg`
   --> tests/ui/import.rs:132:32
    |
132 |     required_embeds = [#[cfg()] #[test]],
    |                                   ^^^^

error: multiple `cfg`s in a row not supported
   --> tests/ui/import.rs:140:30
    |
140 |     required_embeds = [#[cfg()] #[cfg()]],
    |                                 ^^^^^^^^

error: expected a `,` after a tuple
   --> tests/ui/import.rs:148:36
    |
148 |     required_embeds = [("qux", "quux")$],
    |                                       ^

error: expected a `,` after an attribute
   --> tests/ui/import.rs:156:37
    |
156 |     required_embeds = [("qux", "quux")]$
    |                                        ^

error: aborting due to 34 previous errors

